--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Coming+Soon);
-
 /*reset*/
 html, body, div, ul, ol, li, dl, dt, dd, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, fieldset, input, abbr, article, aside, command, details, figcaption, figure, footer, header, hgroup, mark, meter, nav, output, progress, section, summary, time { margin: 0; padding: 0 }
 
@@ -19,7 +17,7 @@ div{
   text-align: center;
   padding:10px 0 10px 0;
   overflow: hidden;
-  font-family: 'Coming Soon', cursive;
+  font-family: 'Coming Soon', serif;
 }
 
 .container{
@@ -36,6 +34,11 @@ button,select,input{
   font-size: 14pt;
   font-family: 'Coming Soon', cursive;
 }
+
+.p{
+  padding-top: 5px;
+}
+
 .btn{
   margin: 10px 0 10px 0;
 }
